Dockerfiles improved with build args

--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -20,21 +20,28 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 # THE SOFTWARE.
 
-ARG repository="cuda"
-FROM nvidia/${repository}:10.0-base-ubuntu16.04
+ARG BASE_CONTAINER="cuda"
+ARG CUDA_BASE="10.0"
+
+FROM nvidia/${BASE_CONTAINER}:${CUDA_BASE}-base-ubuntu16.04
 
 LABEL version="1.0" maintainer="Jonathan DEKHTIAR <contact@jonathandekhtiar.eu>"
 
-# Install the most recent bazel release.
-ENV DEBIAN_FRONTEND=noninteractive \
-    CUDA_VERSION="10-0" \
-    CUDA_PKG_VERSION="10.0" \
-    CUDNN_VERSION="7.4.1.5-1" \
-    NCCL_VERSION="2.3.7-1" \
-    NVINFER_VERSION="5.0.2" \
-    LIBNVINFER_VERSION="5.0.2-1"
+ARG CUDA_BASE
+ARG CUDNN_VERSION="7.4.1.5-1"
+ARG NCCL_VERSION="2.3.7-1"
+ARG LIBNVINFER_VERSION="5.0.2-1"
+
+ENV DEBIAN_FRONTEND=noninteractive
 
 WORKDIR /workspace
+
+RUN bash -c 'echo -e "###################################################"' && \
+    bash -c 'echo -e "   [-] CUDA_BASE          = $CUDA_BASE"' && \
+    bash -c 'echo -e "   [-] CUDNN_VERSION      = $CUDNN_VERSION"' && \
+    bash -c 'echo -e "   [-] NCCL_VERSION       = $NCCL_VERSION"' && \
+    bash -c 'echo -e "   [-] LIBNVINFER_VERSION = $LIBNVINFER_VERSION"' && \
+    bash -c 'echo -e "###################################################"'
 
 # Install Basic Dependencies and Python 3
 RUN apt-get update && \
@@ -52,53 +59,59 @@ RUN apt-get update && \
     rm -f /usr/bin/pip && ln -s /usr/bin/pip3 /usr/bin/pip && \
     rm -f /usr/bin/python-config && ln -s /usr/bin/python3.5-config /usr/bin/python-config
 
-# Installing CUDA + CUDA CLI + CuDNN + NCCL + CuBLAS + CuFFT + CuRAND + NvInfer (TRT)
-RUN apt-get update && \
+# Installing All Necessary NVIDIA Libraries
+RUN export NVINFER_VERSION=$(echo ${LIBNVINFER_VERSION%%-*}) && \
+    export CUDA_PKG_VERSION=$(echo ${CUDA_BASE} | sed 's/\./-/' ) && \
+    bash -c 'echo -e "###################################################"' && \
+    bash -c 'echo -e "   [-] NVINFER_VERSION  = $NVINFER_VERSION"' && \
+    bash -c 'echo -e "   [-] CUDA_PKG_VERSION = $CUDA_PKG_VERSION"' && \
+    bash -c 'echo -e "###################################################"' && \
+    apt-get update && \
     apt-get install -y --no-install-recommends --allow-change-held-packages \
-        cuda-command-line-tools-${CUDA_VERSION} \
-        cuda-cublas-${CUDA_VERSION} \
-        cuda-cublas-dev-${CUDA_VERSION} \
-        cuda-cudart-dev-${CUDA_VERSION} \
-        cuda-cufft-${CUDA_VERSION} \
-        cuda-cufft-dev-${CUDA_VERSION} \
-        cuda-cuobjdump-${CUDA_VERSION} \
-        cuda-cupti-${CUDA_VERSION} \
-        cuda-curand-${CUDA_VERSION} \
-        cuda-curand-dev-${CUDA_VERSION} \
-        cuda-cusolver-${CUDA_VERSION} \
-        cuda-cusolver-dev-${CUDA_VERSION} \
-        cuda-cusparse-${CUDA_VERSION} \
-        cuda-cusparse-dev-${CUDA_VERSION} \
-        cuda-driver-dev-${CUDA_VERSION} \
-        cuda-gdb-${CUDA_VERSION} \
-        cuda-gpu-library-advisor-${CUDA_VERSION} \
-        cuda-libraries-${CUDA_VERSION} \
-        cuda-memcheck-${CUDA_VERSION} \
-        cuda-misc-headers-${CUDA_VERSION} \
-        cuda-npp-${CUDA_VERSION} \
-        cuda-nvcc-${CUDA_VERSION} \
-        cuda-nvdisasm-${CUDA_VERSION} \
-        cuda-nvgraph-${CUDA_VERSION} \
-        cuda-nvjpeg-${CUDA_VERSION} \
-        cuda-nvprof-${CUDA_VERSION} \
-        cuda-nvrtc-${CUDA_VERSION} \
-        cuda-nvtx-${CUDA_VERSION} \
-        libcudnn7=${CUDNN_VERSION}+cuda${CUDA_PKG_VERSION} \
-        libcudnn7-dev=${CUDNN_VERSION}+cuda${CUDA_PKG_VERSION} \
-        libnccl2=${NCCL_VERSION}+cuda${CUDA_PKG_VERSION} \
-        libnccl-dev=${NCCL_VERSION}+cuda${CUDA_PKG_VERSION} && \
+        cuda-command-line-tools-${CUDA_PKG_VERSION} \
+        cuda-cublas-${CUDA_PKG_VERSION} \
+        cuda-cublas-dev-${CUDA_PKG_VERSION} \
+        cuda-cudart-dev-${CUDA_PKG_VERSION} \
+        cuda-cufft-${CUDA_PKG_VERSION} \
+        cuda-cufft-dev-${CUDA_PKG_VERSION} \
+        cuda-cuobjdump-${CUDA_PKG_VERSION} \
+        cuda-cupti-${CUDA_PKG_VERSION} \
+        cuda-curand-${CUDA_PKG_VERSION} \
+        cuda-curand-dev-${CUDA_PKG_VERSION} \
+        cuda-cusolver-${CUDA_PKG_VERSION} \
+        cuda-cusolver-dev-${CUDA_PKG_VERSION} \
+        cuda-cusparse-${CUDA_PKG_VERSION} \
+        cuda-cusparse-dev-${CUDA_PKG_VERSION} \
+        cuda-driver-dev-${CUDA_PKG_VERSION} \
+        cuda-gdb-${CUDA_PKG_VERSION} \
+        cuda-gpu-library-advisor-${CUDA_PKG_VERSION} \
+        cuda-libraries-${CUDA_PKG_VERSION} \
+        cuda-memcheck-${CUDA_PKG_VERSION} \
+        cuda-misc-headers-${CUDA_PKG_VERSION} \
+        cuda-npp-${CUDA_PKG_VERSION} \
+        cuda-nvcc-${CUDA_PKG_VERSION} \
+        cuda-nvdisasm-${CUDA_PKG_VERSION} \
+        cuda-nvgraph-${CUDA_PKG_VERSION} \
+        cuda-nvjpeg-${CUDA_PKG_VERSION} \
+        cuda-nvprof-${CUDA_PKG_VERSION} \
+        cuda-nvrtc-${CUDA_PKG_VERSION} \
+        cuda-nvtx-${CUDA_PKG_VERSION} \
+        libcudnn7=${CUDNN_VERSION}+cuda${CUDA_BASE} \
+        libcudnn7-dev=${CUDNN_VERSION}+cuda${CUDA_BASE} \
+        libnccl2=${NCCL_VERSION}+cuda${CUDA_BASE} \
+        libnccl-dev=${NCCL_VERSION}+cuda${CUDA_BASE} && \
     apt-get update && \
     apt-get install -y \
-        nvinfer-runtime-trt-repo-ubuntu1604-${NVINFER_VERSION}-ga-cuda${CUDA_PKG_VERSION} && \
+        nvinfer-runtime-trt-repo-ubuntu1604-${NVINFER_VERSION}-ga-cuda${CUDA_BASE} && \
     apt-get update && \
     apt-get install -y \
-        libnvinfer5=${LIBNVINFER_VERSION}+cuda${CUDA_PKG_VERSION} \
-        libnvinfer-dev=${LIBNVINFER_VERSION}+cuda${CUDA_PKG_VERSION} && \
+        libnvinfer5=${LIBNVINFER_VERSION}+cuda${CUDA_BASE} \
+        libnvinfer-dev=${LIBNVINFER_VERSION}+cuda${CUDA_BASE} && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
 # Link NCCL libray and header where the build script expects them.
-RUN mkdir /usr/local/cuda-${CUDA_PKG_VERSION}/lib &&  \
+RUN mkdir /usr/local/cuda-${CUDA_BASE}/lib &&  \
     ln -s /usr/lib/x86_64-linux-gnu/libnccl.so.2 /usr/local/cuda/lib/libnccl.so.2 && \
     ln -s /usr/include/nccl.h /usr/local/cuda/include/nccl.h
 
