Base Container Tag Added

--- a/Dockerfile.openmpi
+++ b/Dockerfile.openmpi
@@ -21,8 +21,9 @@
 # THE SOFTWARE.
 
 ARG BASE_CONTAINER="cudnn"
+ARG BASE_CONTAINER_TAG="ubuntu16.04_cuda10.0.130_cudnn7.4.1"
 
-FROM born2data/${BASE_CONTAINER}:ubuntu16.04_cuda10.0.130_cudnn7.4.1
+FROM born2data/${BASE_CONTAINER}:${BASE_CONTAINER_TAG}
 
 ARG OPENMPI_VERSION="3.1.2"
 
