--- a/Dockerfile.openmpi
+++ b/Dockerfile.openmpi
@@ -31,17 +31,9 @@ ENV HOROVOD_GPU_ALLREDUCE=NCCL \
     HOROVOD_WITHOUT_TENSORFLOW='1' \
     HOROVOD_WITHOUT_PYTORCH='1'
 
-RUN apt-get update && apt-get install -y --no-install-recommends \
-        build-essential \
-        cmake \
-        git \
-        curl \
-        vim \
-        wget \
-        ca-certificates \
-        libjpeg-dev \
-        libpng-dev && \
-    apt-get install -y --no-install-recommends openssh-client openssh-server && \
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends \
+        openssh-client openssh-server && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
