--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -70,12 +70,15 @@ RUN export NVINFER_VERSION=$(echo ${LIBNVINFER_VERSION%%-*}) && \
     bash -c 'echo -e "###################################################"' && \
     apt-get update && \
     apt-get install -y --no-install-recommends --allow-change-held-packages \
+        cuda-compat-${CUDA_PKG_VERSION} \
         cuda-compiler-${CUDA_PKG_VERSION} \
+        cuda-core-${CUDA_PKG_VERSION} \
         cuda-npp-dev-${CUDA_PKG_VERSION} \
         cuda-nvjpeg-dev-${CUDA_PKG_VERSION} \
         cuda-nvml-dev-${CUDA_PKG_VERSION} \
         cuda-nvprune-${CUDA_PKG_VERSION} \
         cuda-nvvp-${CUDA_PKG_VERSION} \
+        cuda-tools-${CUDA_PKG_VERSION} \
         cuda-toolkit-${CUDA_PKG_VERSION} \
         cuda-libraries-${CUDA_PKG_VERSION} \
         cuda-libraries-dev-${CUDA_PKG_VERSION} \
