--- a/Dockerfile.dali
+++ b/Dockerfile.dali
@@ -112,7 +112,10 @@ RUN cd /opt/ && \
 # NVIDIA DALI
 RUN git clone --branch=$DALI_BUILD_BRANCH --recursive https://github.com/NVIDIA/dali /opt/dali && \
     mkdir /opt/dali/build && cd /opt/dali/build && \
-    cmake .. && \
+    cmake \
+        -DBUILD_TENSORFLOW=ON \
+        -DBUILD_PYTHON=ON \
+        -DBUILD_LMDB=ON  \
+        .. && \
     make -j"$(nproc)" && \
-    pip install /opt/dali/build/dali/python && \
-    rm -rf /opt/dali
+    pip install /opt/dali/build/dali/python
