Fix env var Docker TF

--- a/Dockerfile.tensorflow
+++ b/Dockerfile.tensorflow
@@ -81,12 +81,8 @@ RUN rm -f /etc/bazel.bazelrc && \
 #
 # ======== CUDA Compute Capabilities ========
 
-ENV LD_LIBRARY_PATH="/usr/local/lib:/usr/local/cuda/lib64"
-ENV LD_LIBRARY_PATH="/usr/local/cuda/lib64/stubs:${LD_LIBRARY_PATH}"
-ENV LD_LIBRARY_PATH="/usr/local/cuda/extras/CUPTI/lib64:${LD_LIBRARY_PATH}"
-ENV LD_LIBRARY_PATH="/usr/lib/x86_64-linux-gnu:${LD_LIBRARY_PATH}"
-
-ENV BLAS_INCLUDE='/usr/local/cuda/targets/x86_64-linux/include' \
+ENV LD_LIBRARY_PATH="/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/local/cuda/lib64:/usr/local/cuda/lib64/stubs:/usr/local/cuda/extras/CUPTI/lib64" \
+    BLAS_INCLUDE='/usr/local/cuda/targets/x86_64-linux/include' \
     BLAS_LIB='/usr/local/cuda/targets/x86_64-linux/lib' \
     CPLUS_INCLUDE_PATH='/usr/local/cuda/$CPLUS_INCLUDE_PATH' \
     CUDA_TOOLKIT_PATH="/usr/local/cuda" \
