--- a/Dockerfile.tensorflow
+++ b/Dockerfile.tensorflow
@@ -81,7 +81,7 @@ RUN rm -f /etc/bazel.bazelrc && \
 #
 # ======== CUDA Compute Capabilities ========
 
-ENV LD_LIBRARY_PATH="/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/local/cuda/lib64:/usr/local/cuda/lib64/stubs:/usr/local/cuda/extras/CUPTI/lib64" \
+ENV LD_LIBRARY_PATH="/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/local/cuda/extras/CUPTI/lib64" \
     BLAS_INCLUDE='/usr/local/cuda/targets/x86_64-linux/include' \
     BLAS_LIB='/usr/local/cuda/targets/x86_64-linux/lib' \
     CPLUS_INCLUDE_PATH='/usr/local/cuda/$CPLUS_INCLUDE_PATH' \
