--- a/Dockerfile.dali
+++ b/Dockerfile.dali
@@ -116,7 +116,7 @@ RUN git clone --branch=$DALI_BUILD_BRANCH --recursive https://github.com/NVIDIA/
     mkdir /opt/dali/build && cd /opt/dali/build && \
     rm -f /usr/local/cuda/lib64/stubs/libcuda.so.1 && \
     ln -s /usr/local/cuda/lib64/stubs/libcuda.so /usr/local/cuda/lib64/stubs/libcuda.so.1 && \
-    ldconfig && \
+    ldconfig /usr/local/cuda/targets/x86_64-linux/lib/stubs && \
     cmake \
         -D CMAKE_INSTALL_PREFIX=. \
         -D BUILD_TENSORFLOW=${BUILD_DALI_FOR_TF} \
@@ -126,4 +126,5 @@ RUN git clone --branch=$DALI_BUILD_BRANCH --recursive https://github.com/NVIDIA/
         .. && \
     make -j"$(nproc)" && \
     pip install --no-cache-dir --no-cache /opt/dali/build/dali/python && \
-    rm -f /usr/local/cuda/lib64/stubs/libcuda.so.1
+    rm -f /usr/local/cuda/lib64/stubs/libcuda.so.1 && \
+    ldconfig
