--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -46,7 +46,7 @@ RUN bash -c 'echo -e "###################################################"' && \
 # Install Basic Dependencies and Python 3
 RUN apt-get update && \
     apt-get install -qqy \
-        apt-utils autoconf libtool nasm \
+        apt-utils autoconf libtool nasm clang \
         build-essential cmake pkg-config rsync \
         python python-dev python3 python3-dev \
         python-numpy python-pip python3-numpy python3-pip \
