--- a/Dockerfile.dali
+++ b/Dockerfile.dali
@@ -121,6 +121,8 @@ RUN export LD_LIBRARY_PATH='${LD_LIBRARY_PATH}:/usr/local/cuda/lib64/stubs:/usr/
     ln -s /usr/local/cuda/lib64/stubs/libcuda.so /usr/local/cuda/lib64/stubs/libcuda.so.1 && \
     ln -s /usr/local/cuda/lib64/stubs/libcuda.so /usr/local/cuda/lib64/libcuda.so && \
     ln -s /usr/local/cuda/lib64/stubs/libcuda.so /usr/local/cuda/lib64/libcuda.so.1 && \
+    ln -s /usr/local/cuda/lib64/stubs/libcuda.so /usr/local/lib/libcuda.so && \
+    ln -s /usr/local/cuda/lib64/stubs/libcuda.so /usr/local/lib/libcuda.so.1 && \
     ldconfig /usr/local/cuda/lib64/stubs && \
     cmake \
         -D CMAKE_INSTALL_PREFIX=. \
