--- a/Dockerfile.dali
+++ b/Dockerfile.dali
@@ -135,5 +135,5 @@ RUN export LD_LIBRARY_PATH='${LD_LIBRARY_PATH}:/usr/local/cuda/lib64/stubs:/usr/
         .. && \
     make -j"$(nproc)" && \
     pip install --no-cache-dir --no-cache /opt/dali/build/dali/python && \
-    rm -f /usr/local/lib/libcuda.so.1
+    rm -f /usr/local/lib/libcuda.so.1 && \
     rm -f /usr/local/cuda/lib64/stubs/libcuda.so.1
