DALI Fix Attempt

--- a/Dockerfile.dali
+++ b/Dockerfile.dali
@@ -110,20 +110,10 @@ RUN cd /opt/ && \
     make -j"$(grep ^processor /proc/cpuinfo | wc -l)" install 2>&1 >/dev/null && \
     rm -rf /opt/libjpeg-turbo-${JPEG_TURBO_VERSION}
 
-RUN ldconfig -v | grep cuda
-
-RUN bash -c 'echo -e "   [-] LD_LIBRARY_PATH = $LD_LIBRARY_PATH"'
-
-# rm -f /usr/local/lib/libcuda.so && \
-# ln -s /usr/local/cuda/lib64/stubs/libcuda.so /usr/local/lib/libcuda.so && \
-
-RUN export LD_LIBRARY_PATH='${LD_LIBRARY_PATH}:/usr/local/cuda/lib64/stubs:/usr/local/cuda/targets/x86_64-linux/lib:/usr/local/cuda/targets/x86_64-linux/lib/stubs:/opt/tensorflow' && \
-    git clone --branch=$DALI_BUILD_BRANCH --recursive https://github.com/NVIDIA/dali /opt/dali && \
+RUN git clone --branch=$DALI_BUILD_BRANCH --recursive https://github.com/NVIDIA/dali /opt/dali && \
     mkdir /opt/dali/build && cd /opt/dali/build && \
-    rm -f /usr/local/lib/libcuda.so && \
-    rm -f /usr/local/cuda/lib64/stubs/libcuda.so.1 && \
-    ln -s /usr/local/cuda/lib64/stubs/libcuda.so /usr/local/lib/libcuda.so && \
-    ln -s /usr/local/cuda/lib64/stubs/libcuda.so /usr/local/cuda/lib64/stubs/libcuda.so.1 && \
+    rm -f /usr/local/cuda/lib64/libcuda.so && \
+    ln -s /usr/local/cuda/lib64/stubs/libcuda.so /usr/local/cuda/lib64/libcuda.so && \
     ldconfig && \
     cmake \
         -D CMAKE_INSTALL_PREFIX=. \
@@ -135,5 +125,4 @@ RUN export LD_LIBRARY_PATH='${LD_LIBRARY_PATH}:/usr/local/cuda/lib64/stubs:/usr/
         .. && \
     make -j"$(nproc)" && \
     pip install --no-cache-dir --no-cache /opt/dali/build/dali/python && \
-    rm -f /usr/local/lib/libcuda.so && \
-    rm -f /usr/local/cuda/lib64/stubs/libcuda.so.1
+    rm -f /usr/local/cuda/lib64/libcuda.so
