--- a/Dockerfile.dali
+++ b/Dockerfile.dali
@@ -114,7 +114,8 @@ RUN git clone --branch=$DALI_BUILD_BRANCH --recursive https://github.com/NVIDIA/
     mkdir /opt/dali/build && cd /opt/dali/build && \
     rm -f /usr/local/cuda/lib64/libcuda.so && \
     ln -s /usr/local/cuda/lib64/stubs/libcuda.so /usr/local/cuda/lib64/libcuda.so && \
-    ldconfig && \
+    echo "LD_LIBRARY_PATH = $LD_LIBRARY_PATH" && \
+    ldconfig /usr/local/cuda/lib64/ && \
     cmake \
         -D CMAKE_INSTALL_PREFIX=. \
         -D BUILD_TENSORFLOW=${BUILD_DALI_FOR_TF} \
