DALI Fix Attempt

--- a/Dockerfile.dali
+++ b/Dockerfile.dali
@@ -110,30 +110,13 @@ RUN cd /opt/ && \
     make -j"$(grep ^processor /proc/cpuinfo | wc -l)" install 2>&1 >/dev/null && \
     rm -rf /opt/libjpeg-turbo-${JPEG_TURBO_VERSION}
 
-# RUN git clone --branch=$DALI_BUILD_BRANCH --recursive https://github.com/NVIDIA/dali /opt/dali && \
-#     mkdir /opt/dali/build && cd /opt/dali/build && \
-#     rm -f /usr/local/lib/libcuda.so && \
-#     ln -s /usr/local/cuda/lib64/stubs/libcuda.so /usr/local/lib/libcuda.so && \
-#     ldconfig && \
-#     cmake \
-#         -D CMAKE_INSTALL_PREFIX=. \
-#         -D BUILD_TENSORFLOW=${BUILD_DALI_FOR_TF} \
-#         -D DALI_TF_SRCS="/opt/tensorflow" \
-#         -D BUILD_PYTHON=ON \
-#         -D BUILD_LMDB=OFF  \
-#         -D WERROR=OFF \
-#         .. && \
-#     make -j"$(nproc)" && \
-#     pip install --no-cache-dir --no-cache /opt/dali/build/dali/python && \
-#     rm -f /usr/local/lib/libcuda.so
-
 
 RUN export LIBRARY_PATH=$LD_LIBRARY_PATH && \
     git clone --branch=$DALI_BUILD_BRANCH --recursive https://github.com/NVIDIA/dali /opt/dali && \
     mkdir /opt/dali/build && cd /opt/dali/build && \
-    rm -f /usr/local/lib/libcuda.so && \
+    rm -f /usr/local/cuda/lib64/libcuda.so && \
     ln -s /usr/local/cuda/lib64/stubs/libcuda.so /usr/local/cuda/lib64/libcuda.so && \
-    ldconfig /usr/local/cuda/lib64 && \
+    ldconfig && \
     cmake \
         -D CMAKE_INSTALL_PREFIX=. \
         -D BUILD_TENSORFLOW=${BUILD_DALI_FOR_TF} \
