--- a/Dockerfile.tensorflow
+++ b/Dockerfile.tensorflow
@@ -124,7 +124,7 @@ RUN rm -rf /opt/tensorflow && \
     rm -rf /root/.cache && \
     rm -rf opt/tensorflow/pip_pkg
 
-ARG HOROVOD_WITH_TENSORFLOW='1' \
+ENV HOROVOD_WITH_TENSORFLOW='1' \
     HOROVOD_WITHOUT_TENSORFLOW='' \
     OMPI_MCA_btl_vader_single_copy_mechanism='none'
 
